Updated calls to newInstance.